[package]
name = "pytunnel"
version = "0.1.0"
authors = ["Ydhcui"]
edition = "2018"

[dependencies]
rust-crypto = "*"
chrono = "0.4"
rand = "*"
log = { version = "*", features = ["std"] }
getopts = "0.2"
crc = "1.4.0"
async-std = { version = "1.6.0", features = ["unstable"] }
futures-timer = "1.0.2"
crossbeam-utils = "0.7"
futures = "0.3"
async-trait = "0.1.41"
http-types = "2.7.0"
async-h1 = "2.1.3"
ctrlc = ""
