
[package]
name = "buut"
version = "1.1.3"
authors = ["Ydhcui"]
edition = "2018"


[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"


[features]
default = ["kcp"]
kcp = [
    "tokio_kcp",
]
log = [
	"env_logger"
]
ws = [
	"bytes",
	"tokio-tungstenite",
	"tokio-util"
]

[dependencies]
rand = "0.7"
getopts = "0.2"
anyhow = "1.0"
futures = "0.3"
lazy_static = "1.4"
async-trait = "0.1"
log = "0.4"
httparse = "1.9"
base64 = "0.21"
sha1 = "0.10"
tokio-rustls = "0.25"
url = "2.5"
serde = "1"
rmp-serde = "1.3"
toml = "0.8"

[dependencies.crypto]
path="./libs/crypto"
version="0.1"

[dependencies.snowstorm]
path="./libs/snowstorm"
version="0.3"

[dependencies.tokio-yamux]
path="./libs/tokio-yamux"
version="0.3"

[dependencies.fast-socks5]
path="./libs/fast-socks5"
version="0.9"

[dependencies.tokio]
version="1.36"
features = ["full"]

[dependencies.env_logger]
optional = true
version="0.6"

[dependencies.tokio_kcp]
optional = true
version="0.9"

[dependencies.bytes]
optional = true
version = "1"
features = ["serde"]

[dependencies.tokio-tungstenite]
optional = true
version = "0.22"

[dependencies.tokio-util]
optional = true
version = "0.7"
features = ["io"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3.9", features = ["wincon","winuser"] }


[build-dependencies]
embed-resource = "1.5"
static_vcruntime = "2.0"
